--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "body-parser": "~1.2.2"
   },
   "devDependencies": {
-    "gulp": "~3.6.2"
+    "gulp": "~3.6.2",
+    "karma": "~0.12.16",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.4"
   }
 }
