--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-strap": "~2.0.3"
   }
 }
