--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "~3.6.2",
     "karma": "~0.12.16",
     "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4"
+    "karma-chrome-launcher": "~0.1.4",
+    "csv-parse": "0.0.4"
   }
 }
