--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "~4.3.0",
     "mysql": "~2.3.1",
-    "body-parser": "~1.2.2"
+    "body-parser": "~1.2.2",
+    "send": "~0.4.1"
   },
   "devDependencies": {
     "gulp": "~3.6.2",
