--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.3.0",
     "mysql": "~2.3.1",
     "body-parser": "~1.2.2",
-    "send": "~0.4.1"
+    "send": "~0.4.1",
+    "moment": "~2.6.0"
   },
   "devDependencies": {
     "gulp": "~3.6.2",
