--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
     "bootstrap": "~3.1.1",
-    "angular-strap": "~2.0.3"
+    "angular-strap": "~2.0.3",
+    "angular-touch": "~1.2.16"
   }
 }
