--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "csv-parse": "0.0.4"
+    "csv-parse": "0.0.4",
+    "mysql": "2.3.2"
   }
 }
