--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,7 @@
     "angular-route": "~1.2.16",
     "bootstrap": "~3.1.1",
     "angular-strap": "~2.0.3",
-    "angular-touch": "~1.2.16"
+    "angular-touch": "~1.2.16",
+    "angular-mocks": "1.2.16"
   }
 }
