--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
     "streamqueue": "~0.1.1",
     "gulp-html-replace": "~1.1.0",
     "gulp-clean": "~0.3.0",
-    "gulp-ngmin": "~0.3.0"
+    "gulp-ngmin": "~0.3.0",
+    "mr": "~0.15.6",
+    "gulp-browserify": "~0.5.0",
+    "gulp-insert": "~0.3.0"
   }
 }
