client/test: get it running with commonjs modules

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "karma": "~0.12.16",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.4",
+    "karma-commonjs": "0.0.8",
     "gulp": "~3.7.0",
     "gulp-angular-templatecache": "~1.2.0",
     "gulp-uglify": "~0.3.0",
