--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "gulp-ngmin": "~0.3.0",
     "mr": "~0.15.6",
     "gulp-browserify": "~0.5.0",
-    "gulp-insert": "~0.3.0"
+    "gulp-insert": "~0.3.0",
+    "gulp-less": "~1.2.3",
+    "gulp-minify-css": "~0.3.4"
   }
 }
