--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,9 @@
     "mysql": "~2.3.1",
     "body-parser": "~1.2.2",
     "send": "~0.4.1",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "di": "~2.0.0-pre-9",
+    "q": "~1.0.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
