--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node --matchall test/*_test.js"
   },
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "license": "MIT",
@@ -17,5 +17,7 @@
     "di": "~2.0.0-pre-9",
     "q": "~1.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jasmine-node": "~1.14.3"
+  }
 }
