--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "moment": "~2.6.0",
     "nodemailer": "~0.6.5",
     "di": "~2.0.0-pre-9",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "hogan.js": "~3.0.2"
   },
   "devDependencies": {
     "jasmine-node": "~1.14.3"
