--- a/client/bower.json
+++ b/client/bower.json
@@ -13,11 +13,11 @@
     "test"
   ],
   "dependencies": {
-    "angular": "~1.2.16",
-    "angular-route": "~1.2.16",
-    "bootstrap": "~3.1.1",
-    "angular-strap": "~2.0.3",
-    "angular-touch": "~1.2.16",
-    "angular-mocks": "1.2.16"
+    "angular": "1.2.18",
+    "angular-route": "1.2.18",
+    "bootstrap": "3.1.1",
+    "angular-strap": "2.0.3",
+    "angular-touch": "1.2.18",
+    "angular-mocks": "1.2.18"
   }
 }
