--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "~0.6.5",
     "di": "~2.0.0-pre-9",
     "q": "~1.0.1",
-    "hogan.js": "~3.0.2"
+    "hogan.js": "~3.0.2",
+    "connect-busboy": "0.0.1"
   },
   "devDependencies": {
     "jasmine-node": "~1.14.3"
