--- a/client/bower.json
+++ b/client/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "3.1.1",
     "angular-strap": "2.0.3",
     "angular-touch": "1.2.18",
-    "angular-mocks": "1.2.18"
+    "angular-mocks": "1.2.18",
+    "angular-file-upload": "~1.0.2"
   }
 }
