--- a/client/bower.json
+++ b/client/bower.json
@@ -19,6 +19,8 @@
     "angular-strap": "2.0.3",
     "angular-touch": "1.2.18",
     "angular-mocks": "1.2.18",
-    "angular-file-upload": "~1.0.2"
+    "angular-file-upload": "~1.0.2",
+    "seiyria-bootstrap-slider": "~3.1.0",
+    "angular-bootstrap-slider": "~0.0.5"
   }
 }
