--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "di": "~2.0.0-pre-9",
     "q": "~1.0.1",
     "hogan.js": "~3.0.2",
-    "connect-busboy": "0.0.1"
+    "connect-busboy": "0.0.1",
+    "jsonwebtoken": "~0.4.1",
+    "bcrypt": "~0.7.8"
   },
   "devDependencies": {
     "jasmine-node": "~1.14.3"
