--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "hogan.js": "~3.0.2",
     "connect-busboy": "0.0.1",
     "jsonwebtoken": "~0.4.1",
-    "bcrypt": "~0.7.8"
+    "bcrypt": "~0.7.8",
+    "express-jwt": "~0.3.1"
   },
   "devDependencies": {
     "jasmine-node": "~1.14.3"
