--- a/pdf_generator/build.gradle
+++ b/pdf_generator/build.gradle
@@ -19,7 +19,9 @@ dependencies {
 jar {
     version =  version
     manifest {
-        attributes("Implementation-Title": "Fill PDF", "Implementation-Version": version, "Main-Class": mainClassName)
+        attributes "Implementation-Title": "Fill PDF",
+                   "Implementation-Version": version,
+                   "Main-Class": mainClassName
     }
 }
 
@@ -28,4 +30,9 @@ task fatJar(type: Jar) {
     version =  version
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
+    manifest {
+        attributes "Implementation-Title": "Fill PDF",
+                   "Implementation-Version": version,
+                   "Main-Class": mainClassName
+    }
 }
