--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.2.2",
     "send": "~0.4.1",
     "moment": "~2.6.0",
+    "googleapis": "^2.0.2",
     "nodemailer": "~0.6.5",
     "di": "~2.0.0-pre-9",
     "q": "~1.0.1",
