--- a/client/package.json
+++ b/client/package.json
@@ -10,22 +10,22 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "karma": "~0.12.16",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-commonjs": "0.0.8",
     "gulp": "~3.7.0",
     "gulp-angular-templatecache": "~1.2.0",
-    "gulp-uglify": "~0.3.0",
-    "gulp-concat": "~2.2.0",
-    "streamqueue": "~0.1.1",
-    "gulp-html-replace": "~1.1.0",
-    "gulp-clean": "~0.3.0",
-    "gulp-ngmin": "~0.3.0",
-    "mr": "~0.15.6",
     "gulp-browserify": "~0.5.0",
+    "gulp-clean": "~0.3.0",
+    "gulp-concat": "~2.2.0",
+    "gulp-html-replace": "~1.1.0",
     "gulp-insert": "~0.3.0",
     "gulp-less": "~1.2.3",
-    "gulp-minify-css": "~0.3.4"
+    "gulp-minify-css": "~0.3.4",
+    "gulp-ngmin": "~0.3.0",
+    "gulp-uglify": "~0.3.0",
+    "karma": "~0.12.16",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-commonjs": "0.0.8",
+    "karma-jasmine": "~0.1.5",
+    "mr": "~0.15.6",
+    "streamqueue": "~0.1.1"
   }
 }
