--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,20 @@
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.3.0",
-    "mysql": "~2.3.1",
-    "body-parser": "~1.2.2",
-    "send": "~0.4.1",
-    "moment": "~2.6.0",
-    "googleapis": "^2.0.2",
-    "nodemailer": "~0.6.5",
-    "di": "~2.0.0-pre-9",
-    "q": "~1.0.1",
-    "hogan.js": "~3.0.2",
-    "connect-busboy": "0.0.1",
-    "jsonwebtoken": "~0.4.1",
     "bcrypt": "~0.7.8",
-    "express-jwt": "~0.3.1"
+    "body-parser": "~1.2.2",
+    "connect-busboy": "0.0.1",
+    "di": "~2.0.0-pre-9",
+    "express": "~4.3.0",
+    "express-jwt": "~0.3.1",
+    "googleapis": "^2.0.2",
+    "hogan.js": "~3.0.2",
+    "jsonwebtoken": "~0.4.1",
+    "moment": "~2.6.0",
+    "mysql": "~2.3.1",
+    "nodemailer": "~0.6.5",
+    "q": "~1.0.1",
+    "send": "~0.4.1"
   },
   "devDependencies": {
     "jasmine-node": "~1.14.3"
