--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fleet-manager-client",
   "version": "0.0.0",
-  "description": "",
+  "private": true,
+  "description": "Fleet Manager - web client",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/joshanijwilson/fm"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
