--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fleet-manager-server",
   "version": "0.0.0",
-  "description": "",
+  "private": true,
+  "description": "Fleet Manager - web server",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/joshanijwilson/fm"
+  },
   "main": "main.js",
   "scripts": {
     "test": "jasmine-node --matchall test/*_test.js"
