--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "jsonwebtoken": "~0.4.1",
     "moment": "~2.6.0",
     "mysql": "~2.3.1",
-    "nodemailer": "~0.6.5",
+    "nodemailer": "^1.3.4",
     "q": "~1.0.1",
     "send": "~0.4.1"
   },
