--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "hogan.js": "~3.0.2",
     "jsonwebtoken": "^5.0.4",
     "moment": "~2.6.0",
+    "msexcel-builder": "joshanijwilson/msexcel-builder#supportnumbers-defaultarial-fixfillcolors",
     "mysql": "~2.3.1",
     "nodemailer": "^1.3.4",
     "q": "~1.0.1",
     "send": "~0.4.1"
   },
   "devDependencies": {
-    "jasmine-node": "~1.14.3"
+    "jasmine-node": "~1.14.3",
+    "open": "0.0.5"
   }
 }
